内容修改，增加运行脚本

--- a/java_mini.tex
+++ b/java_mini.tex
@@ -1,1 +1,1 @@
-\item \textbf{Java后端}：熟悉Java基础、集合、JVM、并发编程与垃圾回收，掌握Spring生态（SpringBoot、SpringMVC）、MyBatis/MyBatisPlus及微服务（SpringCloud、Nacos、OpenFeign等），具备前后端分离与异步高并发处理经验，了解本地大模型部署与SpringAI集成。
+\item \textbf{Java后端}：熟悉Java基础、集合、JVM、并发编程与垃圾回收；掌握Spring生态（SpringBoot、SpringMVC）、MyBatis/MyBatisPlus及微服务（SpringCloud、Nacos、OpenFeign等），具备前后端分离与异步高并发处理经验；了解本地大模型部署与SpringAI集成。
