--- a/common.tex
+++ b/common.tex
@@ -1,2 +1,2 @@
-\item \textbf{前端技术}：了解Javascript/Typescript等前端技术，了解Vue.js核心概念及Element UI组件库，能够高效构建前端项目；了解React框架及Ant DesignUI框架。
+\item \textbf{前端技术}：熟悉Javascript/Typescript等前端开发语言，掌握Vue.js核心概念及Element UI组件库，能够独立高效地构建和维护前端项目；了解React框架及Ant Design UI组件库，具备多框架开发经验，能够根据项目需求选择合适的技术栈。
 \item \textbf{开发环境管理}：熟悉使用Git进行版本控制的流程；熟悉Linux操作系统的基本命令，能够在Linux环境下进行开发和部署；熟悉Docker容器化部署，能够进行高效服务集群的搭建。
