--- a/awards.tex
+++ b/awards.tex
@@ -3,8 +3,10 @@
 % \datedline{Other awards}{2015}
 \begin{normalsize}
   \begin{itemize}[parsep=0.5ex]
-    \item 2023-2024年，华南师范大学本科生优秀奖学金三等奖
-    \item 2024年，第15届蓝桥杯广东赛区Python程序设计A组三等奖
-    \item 2023年，全国大学生数学建模竞赛优胜奖
+    \item 2023-2024年，华南师范大学本科生优秀奖学金\textbf{三等奖}
+    \item 2024年，第15届蓝桥杯广东赛区Python程序设计A组\textbf{三等奖}
+    \item 2025年，团体程序设计天梯赛\textbf{成功参赛奖}
+    \item 2024年，第6届马蹄杯全国大学生程序设计本科赛道国赛\textbf{铜奖}
+    \item 2023年，全国大学生数学建模竞赛\textbf{优胜奖}
   \end{itemize}
 \end{normalsize}
