--- a/java.tex
+++ b/java.tex
@@ -1,4 +1,4 @@
 \item \textbf{Java基础}：熟悉 Java 基础语法、集合框架与 JVM 内存模型，掌握并发编程与垃圾回收机制，理解面向对象设计原则。
 \item \textbf{Spring开发}：熟悉Maven构建与依赖管理，熟练使用Spring生态（SpringBoot、SpringMVC等）构建后端服务，掌握MyBatis/MyBatisPlus持久层框架，理解依赖注入（DI）和面向切面编程（AOP）机制，具备基于RESTful接口开发能力，具备前后端分离开发经验。
 \item \textbf{微服务}：熟悉SpringCloud微服务架构，熟悉Nacos服务注册与发现、Spring Cloud LoadBalancer负载均衡、OpenFeign服务调用、Sentinel服务保护、Gateway服务网关。
-\item \textbf{AI技能}：具备本地大模型部署经验，能够使用Ollama部署大模型并结合SpringAI构建AI应用；熟悉数据结构与算法，了解传统机器学习及深度学习算法。
+\item \textbf{SpringAI}：具备本地大模型部署经验，能够使用Ollama部署大模型并结合SpringAI构建AI应用；熟悉数据结构与算法，了解传统机器学习及深度学习算法。
