--- a/go_proj.tex
+++ b/go_proj.tex
@@ -1,10 +1,10 @@
 \subsection{\textbf{电子商务平台} \hspace{2cm}{2024.10 -- 2024.12}}
-\fontsize{11pt}{0}{\textbf{项目描述}：采用前后端分离架构，实现用户在线购物和商家后台管理，包括用户、商品、订单、分类等模块的统一管理。}
+\fontsize{11pt}{0}{\textbf{项目描述}：基于Go语言和Gin框架的前后端分离电商平台，集成ElasticSearch搜索引擎提供高性能商品检索，具备完整的用户购物流程与商家运营管理系统。}
   \begin{normalsize}
     \begin{itemize}
-    \item \textbf{项目功能}：电子商务平台，支持用户下单、搜索商品、查看订单等功能，商家可通过后台对商品信息和订单进行管理。
+    \item \textbf{项目功能}：用户端支持商品搜索、下单、订单查询；商家端实现商品管理、订单处理、数据统计等功能。
     \item \textbf{相关技术}: Go/Gin/Gorm/MySQL/ElasticSearch/React/Ant Design
-    \item \textbf{个人负责}：采用Gin+Gorm构建业务模块（商品中心/订单中心/用户中心/搜索服务），实现ElasticSearch搜索集群并接入项目的搜索服务，优化搜索接口性能，并负责管理端和用户端的React项目开发，实现商品、订单、用户等模块的管理和用户商品浏览、下单等核心功能。
+    \item \textbf{个人负责}：负责系统架构设计与核心业务模块开发，基于Gin+Gorm实现商品、订单、用户管理等服务，集成ElasticSearch搜索引擎优化商品检索性能，并使用React+Ant Design完成前端界面开发。
     \item \textbf{技术亮点}：
     \setlength{\itemindent}{1em} % 子项缩进调整
       \item[$\circ$] \textbf{后端架构}：基于Gin框架的轻量级高性能特性，采用分层架构设计（路由层→ 逻辑层→ 数据访问层），通过Goroutine实现异步非阻塞I/O模型，使API接口响应时间下降至60ms。
