--- a/resume_mini.tex
+++ b/resume_mini.tex
@@ -11,6 +11,16 @@
 \usepackage{subfig}   %并排图片宏包
 \usepackage{float}    %图片浮动位置
 
+% 减小页面边距
+\usepackage{geometry}
+\geometry{
+  a4paper,
+  left=0.6in,
+  right=0.6in,
+  top=0.3in,
+  bottom=0.2in,
+  nohead
+}
 
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
