--- a/practice.tex
+++ b/practice.tex
@@ -16,6 +16,6 @@
           \item[$\circ$] \textbf{JWT鉴权}：实现基于JWT的登录鉴权，并结合自定义角色守卫与权限守卫进行接口访问控制。
           % \item[$\circ$] \textbf{接口文档}：基于Swagger自动生成接口文档，覆盖率达100\%，显著提升前后端联调效率，减少沟通成本约30\%。
         \setlength{\itemindent}{0em} % 子项缩进调整
-        \item \textbf{相关技术}: NestJS/TypeORM/MySQL/Redis/MongoDB/RabbitMQ/JWT/Coze AI/Webhook
+        \item \textbf{相关技术}: NestJS/TypeORM/MySQL/Redis/MongoDB/RabbitMQ/JWT/Coze AI
         \end{itemize}
     \end{normalsize}
