--- a/resume_mini.tex
+++ b/resume_mini.tex
@@ -22,6 +22,9 @@
   nohead
 }
 
+% TODO: 修改项目描述，增加具体的使用场景，比如什么场景下的外卖项目或者什么场景下的电商项目
+% TODO: 修改教师管理系统，换成在线博客系统的描述
+
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
