--- a/java_proj.tex
+++ b/java_proj.tex
@@ -1,8 +1,8 @@
-\subsection{\textbf{外卖点单和管理平台} \hspace{2cm}{2025.01 -- 2025.04}}
-\fontsize{11pt}{0}{\textbf{项目描述}：基于SpringBoot微服务架构的外卖平台，支持用户小程序下单与商家网页端管理，集成本地大模型提供智能辅助功能。}
+\subsection{\textbf{校园餐厅智能化场景下的外卖点单和管理平台} \hspace{2cm}{2025.01 -- 2025.04}}
+\fontsize{11pt}{0}{\textbf{项目描述}：面向高校食堂数字化转型的智能外卖平台，基于SpringBoot微服务架构，专门解决校园餐厅排队拥堵、订单管理效率低等问题，支持学生小程序预订取餐与餐厅网页端智能管理，集成本地大模型提供智能辅助功能。}
     \begin{normalsize}
       \begin{itemize}
-        \item \textbf{项目功能}：用户小程序端支持下单、支付、订单查询，商家网页端管理菜品、套餐、订单信息，且平台集成本地大语言模型，员工通过聊天界面获取管理建议和信息查询。
+        \item \textbf{项目功能}：学生小程序端支持预约点餐、在线支付、取餐提醒，餐厅网页端管理菜品、套餐、订单排程，且平台集成本地大语言模型，餐厅员工通过智能助手获取订单优化建议和库存查询。
         \item \textbf{相关技术}: SpringBoot/SpringCloud/RabbitMQ/MyBatisPlus/MySQL/Redis/Ollama/Vue.js
         \item \textbf{个人负责}：设计高可用微服务架构，主导核心服务开发（订单/支付/菜品/大模型服务），完成Ollama大模型本地化部署和接入项目，并完成员工网页端前端模块开发（菜品管理/员工管理/销售报表）。
         \item \textbf{技术亮点}：
