--- a/python_proj.tex
+++ b/python_proj.tex
@@ -1,16 +1,18 @@
-\subsection{\textbf{教师管理平台} \hspace{2cm}{2024.07 -- 2024.09}}
-\fontsize{11pt}{0}{\textbf{项目描述}：基于FastAPI的前后端分离教师管理平台，采用异步架构设计，具备教师信息管理、课程安排调度、考勤记录统计等综合管理功能。}
+\subsection{\textbf{技术团队协作场景下的在线博客系统} \hspace{2cm}{2024.07 -- 2024.09}}
+\fontsize{11pt}{0}{\textbf{项目描述}：面向IT技术团队的知识分享与协作博客平台，基于FastAPI的前后端分离架构设计，专门服务于企业内部技术文档管理、项目经验总结、代码片段共享等场景，采用异步架构设计，具备文章管理、团队协作、评论系统、标签分类等综合博客功能。}
   \begin{normalsize}
     \begin{itemize}
-    \item \textbf{项目功能}：支持添加、编辑、删除教师信息，支持按部门、职称等条件查询，而且能够制定和调整教师的课程安排，记录教师的出勤情况等。
+    \item \textbf{项目功能}：支持技术文档发布编辑、项目复盘记录、代码片段分享，支持按技术栈、项目类型、时间等条件查询，团队成员可进行技术讨论互动，统计知识库阅读量和团队活跃度等。
     \item \textbf{相关技术}: Python/FastAPI/SQLAlchemy/MySQL/Vue.js/Element UI
-    \item \textbf{个人负责}：负责后端服务架构设计与核心模块开发，基于FastAPI实现教师信息管理、课程编排与考勤统计模块，设计并优化MySQL数据库结构，并使用Vue.js和Element UI完成前端页面模块的实现。
+    \item \textbf{个人负责}：负责后端服务架构设计与核心模块开发，基于FastAPI实现技术文档管理、团队协作系统与讨论交互模块，设计并优化MySQL数据库结构，并使用Vue.js和Element UI完成前端页面模块的实现。
     \item \textbf{技术亮点}：
     \setlength{\itemindent}{1em} % 子项缩进调整
-      \item[$\circ$] \textbf{后端架构}：采用FastAPI路由-控制层-服务层结构划分，结合中间件实现功能解耦，将教师信息、课程安排与考勤模块清晰拆分，提升代码可维护性和扩展性。
-      \item[$\circ$] \textbf{数据库优化}：使用SQLAlchemy ORM进行数据建模，对教师工号、部门ID、课程时间等关键字段建立复合索引，优化查询逻辑与连接池配置，将教师信息综合查询响应时间从1.8s缩短至0.4s。
+      \item[$\circ$] \textbf{后端架构}：采用FastAPI路由-控制层-服务层结构划分，结合中间件实现功能解耦，将技术文档管理、团队协作与讨论模块清晰拆分，提升代码可维护性和扩展性。
+      \item[$\circ$] \textbf{数据库优化}：使用SQLAlchemy ORM进行数据建模，对文档ID、技术标签、发布时间等关键字段建立复合索引，优化查询逻辑与连接池配置，将技术文档检索响应时间从1.8s缩短至0.4s。
       \item[$\circ$] \textbf{异步高并发}：利用FastAPI的异步特性和Uvicorn服务器，在高并发场景下保持接口响应的高可用性和吞吐量，系统在模拟并发1000+请求时仍保持稳定运行，无明显性能瓶颈。
       \item[$\circ$] \textbf{JWT鉴权}：基于FastAPI中间件与PyJWT，实现用户认证与权限控制，权限校验平均耗时控制在200ms以内，支持日均3000+次安全访问请求。
-      \item[$\circ$] \textbf{前端UI优化}：前端采用Vue.js结合Element UI组件库，快速搭建高可用的管理后台，提升表单、表格、弹窗等交互体验，实现教师信息、课程安排等模块的高效可视化管理。
+      \item[$\circ$] \textbf{数据分析与预测}：集成Pandas和Scikit-learn实现用户行为分析，通过机器学习算法预测文章热度和用户兴趣，构建个性化推荐系统，使用TF-IDF和余弦相似度算法实现文章智能推荐，推荐准确率达到75\%以上。
+      \item[$\circ$] \textbf{数据可视化}：基于Matplotlib和ECharts.js构建数据展示模块，实时监控文章阅读趋势、用户活跃度和评论热度，为内容运营提供数据支撑，日均处理分析数据量超过10万条记录。
+      \item[$\circ$] \textbf{前端UI优化}：前端采用Vue.js结合Element UI组件库，快速搭建高可用的博客界面，提升文章编辑器、评论区、分类导航等交互体验，实现文章发布、用户管理等模块的高效可视化操作。
     \end{itemize}
   \end{normalsize}
