--- a/resume_3.tex
+++ b/resume_3.tex
@@ -34,6 +34,7 @@
   \begin{itemize}
     \input{db}
     \input{java}
+    \input{behind}
     \input{go_mini}
     \input{node_mini}
     \input{common}
