--- a/resume_all.tex
+++ b/resume_all.tex
@@ -15,10 +15,10 @@
 \usepackage{geometry}
 \geometry{
   a4paper,
-  left=0.6in,
-  right=0.6in,
-  top=0.5in,
-  bottom=0.4in,
+  left=0.4in,
+  right=0.4in,
+  top=0.3in,
+  bottom=0.2in,
   nohead
 }
 
@@ -54,6 +54,7 @@
     \input{node}
     % \item \textbf{Python后端}：熟悉Python语言基础与异步编程，具备基于FastAPI框架的RESTful接口开发能力，能够使用SQLAlchemy ORM进行数据库操作，完成高性能Web服务的开发与部署；能够利用Python的高效库（如Pandas、NumPy等）进行数据处理、分析与可视化。
     \input{python}
+    \input{behind}
     \input{common}
     
   \end{itemize}
