--- a/java_proj.tex
+++ b/java_proj.tex
@@ -11,6 +11,7 @@
           \item[$\circ$] \textbf{微服务架构升级}：采用Spring Cloud组件（如Nacos服务注册发现、Gateway网关等），将订单、用户、菜品管理等模块拆分为独立服务。
           \item[$\circ$] \textbf{RabbitMQ异步解耦​​}：通过RabbitMQ实现微服务之间的异步调用，将订单创建、支付处理等操作解耦，提升系统吞吐量50\%。
           \item[$\circ$] \textbf{Redis缓存}：使用主从+哨兵模式进行Redis的部署，将菜品信息与套餐信息进行缓存，使用户在小程查询时间从600ms降至70ms，支撑10万+的并发请求。
+          \item[$\circ$] \textbf{定时任务调度}：基于Spring Task实现订单超时自动取消、自动变更订单状态等功能，提升系统自动化效率。
           % \item[$\circ$] \textbf{JWT鉴权}：基于自定义拦截器和ThreadLocal实现员工的认证与鉴权，实现200ms内完成权限校验，支撑日均3000+次的安全访问。
           \item[$\circ$] \textbf{微信登录集成}：集成微信小程序登录，通过微信开放平台接口实现用户身份验证，结合JWT令牌与自定义拦截器完成登录校验，支持日均300+次认证请求。
           \item[$\circ$] \textbf{前端数据可视化}：基于Vue.js和Echarts图表库构建员工端报表模块，实现订单量、菜品销量等数据的可视化展示，提供趋势图、分布图等分析报表，提升运营决策效率约20\%。
