--- a/go_proj.tex
+++ b/go_proj.tex
@@ -7,9 +7,8 @@
     \item \textbf{个人负责}：负责系统架构设计与核心业务模块开发，基于Gin+Gorm实现商品、订单、用户管理等服务，集成ElasticSearch搜索引擎优化商品检索性能，并使用React+Ant Design完成前端界面开发。
     \item \textbf{技术亮点}：
     \setlength{\itemindent}{1em} % 子项缩进调整
-      \item[$\circ$] \textbf{后端架构}：基于Gin框架的轻量级高性能特性，采用分层架构设计（路由层→ 逻辑层→ 数据访问层），通过Goroutine实现异步非阻塞I/O模型，使API接口响应时间下降至60ms。
-        \item[$\circ$] \textbf{JWT鉴权}：使用JWT鉴权中间件实现学生身份认证与权限管理，实现200ms内完成权限校验，支撑日均3000+次的安全访问。
-        \item[$\circ$] \textbf{ElasticSearch搜索优化}：集成ElasticSearch实现多条件二手商品搜索，支持品类、校区、价格区间等检索，将响应时间从300ms优化至60ms，有效提升校园二手交易的匹配效率。
-        \item[$\circ$] \textbf{前端页面}：使用React进行管理端和学生端开发，基于Ant Design组件库实现商品、订单、用户等模块的高效管理界面，优化表单、表格与交互流程，提升学生操作体验和系统易用性。
+      \item[$\circ$] \textbf{高性能后端架构}：基于Gin框架分层设计（路由层→逻辑层→数据访问层），通过Goroutine实现异步非阻塞I/O，API接口响应时间降至60ms，JWT鉴权中间件实现200ms内权限校验。
+      \item[$\circ$] \textbf{搜索引擎优化}：集成ElasticSearch实现多条件商品搜索（品类、校区、价格区间），响应时间从300ms优化至60ms，有效提升校园二手交易匹配效率，支撑日均3000+次安全访问。
+      \item[$\circ$] \textbf{前端界面开发}：使用React+Ant Design构建管理端和学生端界面，实现商品、订单、用户等模块的高效管理，优化表单、表格与交互流程，提升学生操作体验和系统易用性。
     \end{itemize}
   \end{normalsize}
