--- a/resume_3.tex
+++ b/resume_3.tex
@@ -22,6 +22,10 @@
   nohead
 }
 
+% 调整行间距和列表间距
+\renewcommand{\baselinestretch}{0.95}
+\setlength{\parskip}{-2pt}
+
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
