--- a/java_proj.tex
+++ b/java_proj.tex
@@ -7,14 +7,9 @@
         \item \textbf{个人负责}：设计高可用微服务架构，主导核心服务开发（订单/支付/菜品/大模型服务），完成Ollama大模型本地化部署和接入项目，并完成员工网页端前端模块开发（菜品管理/员工管理/销售报表）。
         \item \textbf{技术亮点}：
         \setlength{\itemindent}{1em} % 子项缩进调整
-          \item[$\circ$] \textbf{后端架构}：采用Spring Boot的Controller-Service-DAO分层模式，将员工信息管理、菜品管理、订单管理等模块解耦，提升代码复用率和可维护性。
-          \item[$\circ$] \textbf{微服务架构升级}：采用Spring Cloud组件（如Nacos服务注册发现、Gateway网关等），将订单、用户、菜品管理等模块拆分为独立服务。
-          \item[$\circ$] \textbf{RabbitMQ异步解耦​​}：通过RabbitMQ实现微服务之间的异步调用，将订单创建、支付处理等操作解耦，提升系统吞吐量50\%。
-          \item[$\circ$] \textbf{Redis缓存}：使用主从+哨兵模式进行Redis的部署，将菜品信息与套餐信息进行缓存，使用户在小程查询时间从600ms降至70ms，支撑10万+的并发请求。
-          \item[$\circ$] \textbf{定时任务调度}：基于Spring Task实现订单超时自动取消、自动变更订单状态等功能，提升系统自动化效率。
-          % \item[$\circ$] \textbf{JWT鉴权}：基于自定义拦截器和ThreadLocal实现员工的认证与鉴权，实现200ms内完成权限校验，支撑日均3000+次的安全访问。
-          \item[$\circ$] \textbf{微信登录集成}：集成微信小程序登录，通过微信开放平台接口实现用户身份验证，结合JWT令牌与自定义拦截器完成登录校验，支持日均300+次认证请求。
-          \item[$\circ$] \textbf{前端数据可视化}：基于Vue.js和Echarts图表库构建员工端报表模块，实现订单量、菜品销量等数据的可视化展示，提供趋势图、分布图等分析报表，提升运营决策效率约20\%。
-          \item[$\circ$] \textbf{本地大模型接入}：使用Ollama进行本地大模型的部署，并通过SpringAI的Ollama依赖进行后端API调用，实现员工智能处理订单请求，提升约30\%的出餐效率。
+          \item[$\circ$] \textbf{微服务架构设计}：采用Spring Boot分层模式和Spring Cloud组件（Nacos、Gateway），将订单、用户、菜品等模块拆分为独立服务，提升代码复用率和可维护性。
+          \item[$\circ$] \textbf{高并发优化}：使用Redis主从+哨兵模式缓存菜品信息，查询时间从600ms降至70ms，集成RabbitMQ实现异步解耦，系统吞吐量提升50\%，支撑10万+并发请求。
+          \item[$\circ$] \textbf{智能化与认证}：集成Ollama本地大模型通过SpringAI提供智能订单处理，提升出餐效率30\%；实现微信小程序登录与JWT认证，支持日均300+次认证请求。
+          \item[$\circ$] \textbf{数据可视化与自动化}：基于Vue.js+Echarts构建报表模块，实现订单量、销量等数据可视化，提升运营决策效率20\%；Spring Task定时任务实现订单超时自动取消等功能。
         \end{itemize}
     \end{normalsize}
