--- a/db.tex
+++ b/db.tex
@@ -1,2 +1,2 @@
 \item \textbf{数据库}：具备MySQL等关系型数据库设计与优化能力，熟悉事务管理和索引优化；掌握Redis、MongoDB等NoSQL数据库的应用，能够根据需求灵活选择数据存储方案；具备使用Elasticsearch构建高性能搜索引擎的经验，能够进行分词、聚合分析与查询优化，提升数据检索效率。
-\item \textbf{消息队列}：具备使用RabbitMQ实现异步解耦、消息确认与异常处理的能力，熟悉消息持久化、延迟队列、死信队列等高级特性，能够结合业务需求设计高可用、高吞吐的消息系统。
+\item \textbf{消息队列}：熟练使用RabbitMQ实现异步解耦与高可用消息系统，掌握消息持久化、延迟与死信队列等特性；了解Kafka分布式架构，有高并发消息流处理与管道搭建经验。
