--- a/practice.tex
+++ b/practice.tex
@@ -12,6 +12,6 @@
       \item[$\circ$] \textbf{竞对数据分析}：基于爬虫技术采集竞对商品数据，监控商品排位变化，实现价格、销量等关键指标追踪与分析，日均采集商品数据3万+条，覆盖500+竞对SKU监控。
       \item[$\circ$] \textbf{日志记录与监控}：使用MongoDB结合Mongoose建模，记录系统关键业务操作与用户行为日志，支持日均2万+操作日志高效写入，突破关系型数据库字段限制。
     \setlength{\itemindent}{0em} % 子项缩进调整
-    \item \textbf{相关技术}: NestJS/TypeORM/MySQL/Redis/MongoDB/RabbitMQ/Coze AI/钉钉开放平台
+    \item \textbf{相关技术}: Node.js/NestJS/TypeORM/MySQL/Redis/MongoDB/RabbitMQ/Coze AI/钉钉开放平台
     \end{itemize}
   \end{normalsize}
