--- a/python_proj.tex
+++ b/python_proj.tex
@@ -1,15 +1,16 @@
-\subsection{\textbf{技术团队协作场景下的在线博客系统} \hspace{2cm}{2024.07 -- 2024.09}}
+\subsection{\textbf{技术团队协作场景下的在线博客系统} \hspace{2cm}{2025.06 -- 2025.07}}
 \fontsize{11pt}{0}{\textbf{项目描述}：面向IT技术团队的知识分享与协作博客平台，基于FastAPI的前后端分离架构设计，专门服务于企业内部技术文档管理、项目经验总结、代码片段共享等场景，采用异步架构设计，具备文章管理、团队协作、评论系统、标签分类等综合博客功能。}
   \begin{normalsize}
     \begin{itemize}
-    \item \textbf{项目功能}：支持技术文档发布编辑、项目复盘记录、代码片段分享，支持按技术栈、项目类型、时间等条件查询，团队成员可进行技术讨论互动，统计知识库阅读量和团队活跃度等。
-    \item \textbf{相关技术}: Python/FastAPI/SQLAlchemy/MySQL/Vue.js/Element UI
-    \item \textbf{个人负责}：负责后端服务架构设计与核心模块开发，基于FastAPI实现技术文档管理、团队协作系统与讨论交互模块，设计并优化MySQL数据库结构，并使用Vue.js和Element UI完成前端页面模块的实现。
+    \item \textbf{项目功能}：支持技术文档发布编辑、代码片段分享，支持按技术栈、项目类型、时间等条件查询，团队成员可进行技术讨论互动，统计知识库阅读量和团队活跃度等。
+    \item \textbf{相关技术}: Python/FastAPI/SQLAlchemy/MySQL/Pandas/Scikit-learn/React/Ant Design/Coze AI
+    \item \textbf{个人负责}：负责后端服务架构设计与核心模块开发，基于FastAPI实现技术文档管理、团队协作系统与讨论交互模块，设计并优化MySQL数据库结构，并使用React和Ant Design实现前端页面，集成Coze实现AI数据分析与智能聊天。
     \item \textbf{技术亮点}：
     \setlength{\itemindent}{1em} % 子项缩进调整
       \item[$\circ$] \textbf{后端架构与数据库优化}：采用FastAPI路由-控制层-服务层结构，使用SQLAlchemy ORM建立复合索引，优化查询逻辑与连接池配置，文档检索响应时间从1.8s缩短至0.4s。
       \item[$\circ$] \textbf{高并发与安全认证}：利用FastAPI异步特性和Uvicorn服务器，支持1000+并发请求稳定运行；集成JWT中间件实现权限控制，权限校验平均耗时200ms，支持日均3000+次安全访问。
       \item[$\circ$] \textbf{智能推荐与数据分析}：集成Pandas+Scikit-learn实现用户行为分析，使用TF-IDF和余弦相似度算法构建个性化推荐系统，推荐准确率达75\%以上，日均处理分析数据10万+条。
-      \item[$\circ$] \textbf{前端UI与数据可视化}：基于Vue.js+Element UI构建高可用博客界面，集成Matplotlib+ECharts.js实现阅读趋势、用户活跃度等数据可视化展示，提升内容运营效率。
+      \item[$\circ$] \textbf{前端UI与数据可视化}：基于React+Ant Design构建高可用博客界面，页面加载时间控制在1.2s内，集成@ant-design/charts实现阅读趋势、用户活跃度等数据可视化展示，管理效率提升60\%。
+      \item[$\circ$] \textbf{AI与交互体验}：Coze平台+react-markdown打造智能问答与美观AI聊天界面，AI回复准确率达85\%，团队问题解决效率提升40\%，日均AI交互次数500+次。
     \end{itemize}
   \end{normalsize}
