--- a/go_mini.tex
+++ b/go_mini.tex
@@ -1,1 +1,1 @@
-\item \textbf{Go后端}：熟悉Go语言基础语法，掌握Goroutine与Channel并发模型；具备基于Gin框架的 RESTful接口开发能力，能够使用GORM进行数据库操作，完成高性能Web服务的开发与部署。
+\item \textbf{Go后端技术}：熟悉Go语言基础语法、类型系统与标准库，掌握Goroutine与Channel并发模型，理解Go模块管理与工具链；具备基于Gin框架的RESTful接口开发能力，熟练使用GORM进行ORM建模、关系映射与事务处理，实现高性能Web服务的设计、开发与部署。
