--- a/java_proj.tex
+++ b/java_proj.tex
@@ -1,5 +1,5 @@
 \subsection{\textbf{校园餐厅智能化场景下的外卖点单和管理平台} \hspace{2cm}{2025.01 -- 2025.04}}
-\fontsize{11pt}{0}{\textbf{项目描述}：面向高校食堂数字化转型的智能外卖平台，基于SpringBoot微服务架构，专门解决校园餐厅排队拥堵、订单管理效率低等问题，支持学生小程序预订取餐与餐厅网页端智能管理，集成本地大模型提供智能辅助功能。}
+\fontsize{11pt}{0}{\textbf{项目描述}：面向高校食堂数字化转型的智能外卖平台，基于SpringCloud微服务架构，解决校园餐厅排队拥堵、订单管理效率低等问题，支持学生小程序预订取餐与餐厅网页端智能管理，集成本地大模型提供智能辅助功能。}
     \begin{normalsize}
       \begin{itemize}
         \item \textbf{项目功能}：学生小程序端支持预约点餐、在线支付、取餐提醒，餐厅网页端管理菜品、套餐、订单排程，且平台集成本地大语言模型，餐厅员工通过智能助手获取订单优化建议和库存查询。
