--- a/node_mini.tex
+++ b/node_mini.tex
@@ -1,1 +1,1 @@
-\item \textbf{Node.js后端}：熟悉Node.js及主流框架（如Express、NestJS），具备模块化后端开发能力，能够使用Mongoose操作MongoDB，熟练用TypeORM构建关系型数据模型并支持事务控制。
+\item \textbf{Node.js开发}：熟悉Node.js及主流框架（Express、NestJS），具备模块化开发能力；掌握异步编程与事件驱动模型，理解中间件机制，能用Mongoose高效操作MongoDB；精通TypeORM建模、关系映射与事务处理。
