--- a/python_proj.tex
+++ b/python_proj.tex
@@ -10,7 +10,7 @@
       \item[$\circ$] \textbf{后端架构与数据库优化}：采用FastAPI路由-控制层-服务层结构，使用SQLAlchemy ORM建立复合索引，优化查询逻辑与连接池配置，文档检索响应时间从1.8s缩短至0.4s。
       \item[$\circ$] \textbf{高并发与安全认证}：利用FastAPI异步特性和Uvicorn服务器，支持1000+并发请求稳定运行；集成JWT中间件实现权限控制，权限校验平均耗时200ms，支持日均3000+次安全访问。
       \item[$\circ$] \textbf{智能推荐与数据分析}：集成Pandas+Scikit-learn实现用户行为分析，使用TF-IDF和余弦相似度算法构建个性化推荐系统，推荐准确率达75\%以上，日均处理分析数据10万+条。
-      \item[$\circ$] \textbf{前端UI与数据可视化}：基于React+Ant Design构建高可用博客界面，页面加载时间控制在1.2s内，集成@ant-design/charts实现阅读趋势、用户活跃度等数据可视化展示，管理效率提升60\%。
-      \item[$\circ$] \textbf{AI与交互体验}：Coze平台+react-markdown打造智能问答与美观AI聊天界面，AI回复准确率达85\%，团队问题解决效率提升40\%，日均AI交互次数500+次。
+      \item[$\circ$] \textbf{前端UI与数据可视化}：基于React+Ant Design构建高可用博客界面，支持Markdown格式内容输入与实时渲染，并集成Ant Design Charts实现阅读趋势、用户活跃度等数据可视化展示，管理效率提升60\%。
+      \item[$\circ$] \textbf{AI与交互体验}：Coze平台+React Markdown打造智能问答与美观AI聊天界面，AI回复准确率达85\%，团队问题解决效率提升40\%，日均AI交互次数500+次。
     \end{itemize}
   \end{normalsize}
