--- a/java_proj.tex
+++ b/java_proj.tex
@@ -1,9 +1,7 @@
 \subsection{\textbf{校园餐厅智能化场景下的外卖点单和管理平台} \hspace{2cm}{2025.01 -- 2025.04}}
-\fontsize{11pt}{0}{\textbf{项目描述}：面向高校食堂数字化转型的智能外卖平台，基于SpringCloud微服务架构，解决校园餐厅排队拥堵、订单管理效率低等问题，支持学生小程序预订取餐与餐厅网页端智能管理，集成本地大模型提供智能辅助功能。}
+\fontsize{11pt}{0}{\textbf{项目描述}：面向高校食堂数字化转型，打造基于SpringCloud微服务的智能外卖平台，支持小程序点餐、在线支付、智能助手辅助管理，提升餐厅运营效率与用户体验。}
     \begin{normalsize}
       \begin{itemize}
-        \item \textbf{项目功能}：学生小程序端支持预约点餐、在线支付、取餐提醒，餐厅网页端管理菜品、套餐、订单排程，且平台集成本地大语言模型，餐厅员工通过智能助手获取订单优化建议和库存查询。
-        \item \textbf{相关技术}: Java/SpringBoot/SpringCloud/RabbitMQ/MyBatisPlus/MySQL/Redis/Ollama/Vue.js
         \item \textbf{个人负责}：设计高可用微服务架构，主导核心服务开发（订单/支付/菜品/大模型服务），完成Ollama大模型本地化部署和接入项目，并完成员工网页端前端模块开发（菜品管理/员工管理/销售报表）。
         \item \textbf{技术亮点}：
         \setlength{\itemindent}{1em} % 子项缩进调整
@@ -12,5 +10,7 @@
           \item[$\circ$] \textbf{高并发优化}：使用Redis主从+哨兵模式缓存菜品信息，查询时间从600ms降至70ms，集成RabbitMQ实现异步解耦，系统吞吐量提升50\%，支撑10万+并发请求。
           \item[$\circ$] \textbf{智能化与认证}：集成Ollama本地大模型通过SpringAI提供智能订单处理，提升出餐效率30\%；实现微信小程序登录与JWT认证，支持日均300+次认证请求。
           \item[$\circ$] \textbf{数据可视化与自动化}：基于Vue.js+Echarts构建报表模块，实现订单量、销量等数据可视化，提升运营决策效率20\%。
+        \setlength{\itemindent}{0em} % 子项缩进调整
+        \item \textbf{相关技术}: Java/SpringBoot/SpringCloud/RabbitMQ/MyBatisPlus/MySQL/Redis/Ollama/Vue.js
         \end{itemize}
     \end{normalsize}
