--- a/python_proj.tex
+++ b/python_proj.tex
@@ -1,16 +1,16 @@
 \subsection{\textbf{技术团队协作场景下的在线博客系统} \hspace{2cm}{2025.06 -- 2025.07}}
-\fontsize{11pt}{0}{\textbf{项目描述}：面向IT技术团队知识协作场景，基于FastAPI异步架构，支持文档管理、代码分享、团队互动与智能推荐，结合SQLAlchemy与PyMySQL提升数据库访问效率，助力企业内部知识沉淀与协作效率提升。}
+\fontsize{11pt}{0}{\textbf{项目描述}：面向IT技术团队知识协作场景，基于FastAPI异步架构，支持文档管理、代码分享、团队互动与智能推荐，助力企业知识沉淀与协作效率提升。}
   \begin{normalsize}
     \begin{itemize}
     \item \textbf{个人负责}：负责后端服务架构设计与核心模块开发，基于FastAPI实现技术文档管理、团队协作系统与讨论交互模块，设计并优化MySQL数据库结构，结合SQLAlchemy与PyMySQL提升数据库访问效率，并使用React和Ant Design实现前端页面，集成Coze实现AI数据分析与智能聊天。
     \item \textbf{技术亮点}：
     \setlength{\itemindent}{1em} % 子项缩进调整
-      \item[$\circ$] \textbf{后端架构与数据库优化}：采用FastAPI路由-控制层-服务层结构，结合SQLAlchemy ORM与PyMySQL，建立复合索引，优化查询逻辑与连接池配置，文档检索响应时间从1.8s缩短至0.4s。
+      \item[$\circ$] \textbf{后端架构与数据库优化}：采用FastAPI结合Pydantic进行路由与数据模型校验，配合SQLAlchemy ORM与PyMySQL，建立复合索引，优化查询与连接池，文档检索响应时间从1.8s缩短至0.4s。
       \item[$\circ$] \textbf{高并发与安全认证}：利用FastAPI异步特性和Uvicorn服务器，支持1000+并发请求稳定运行；集成JWT中间件实现权限控制，权限校验平均耗时200ms，支持日均3000+次安全访问。
       \item[$\circ$] \textbf{智能推荐与数据分析}：集成Pandas+Scikit-learn实现用户行为分析，使用TF-IDF和余弦相似度算法构建个性化推荐系统，推荐准确率达75\%以上，日均处理分析数据10万+条。
-      \item[$\circ$] \textbf{前端UI与数据可视化}：基于React+Ant Design构建高可用博客界面，支持Markdown格式内容输入与实时渲染，并集成Ant Design Charts实现阅读趋势、用户活跃度等数据可视化展示，管理效率提升60\%。
+      \item[$\circ$] \textbf{前端UI与数据可视化}：基于React+Ant Design构建高可用博客界面，支持Markdown格式内容输入与实时渲染，并集成React Echarts实现阅读趋势、用户活跃度等多种数据可视化展示，管理效率提升60\%。
       \item[$\circ$] \textbf{AI与交互体验}：Coze平台+React Markdown打造智能问答与美观AI聊天界面，AI回复准确率达85\%，团队问题解决效率提升40\%，日均AI交互次数500+次。
     \setlength{\itemindent}{0em} % 子项缩进调整
-    \item \textbf{相关技术}: Python/FastAPI/SQLAlchemy/PyMySQL/MySQL/Pandas/Scikit-learn/React/Ant Design/Coze AI
+    \item \textbf{相关技术}: Python/FastAPI/SQLAlchemy/MySQL/Pandas/Scikit-learn/React/Ant Design/Coze AI
     \end{itemize}
   \end{normalsize}
