--- a/python_mini.tex
+++ b/python_mini.tex
@@ -1,1 +1,1 @@
-\item \textbf{Python数据分析}：熟悉Python语法、类型注解、面向对象与异步编程；精通基于FastAPI与Pydantic的数据建模、校验与RESTful接口开发；熟练使用SQLAlchemy与PyMySQL进行ORM建模、关系映射与事务处理；精通Pandas、NumPy、Matplotlib等库的数据处理、分析与可视化。
+\item \textbf{Python数据分析}：熟悉Python语法、类型注解、面向对象与异步编程；精通基于FastAPI与Pydantic的数据建模、校验与RESTful接口开发；熟练使用SQLAlchemy/SQLModel与PyMySQL进行ORM建模、关系映射与事务处理；精通Pandas、NumPy、Matplotlib等库的数据处理、分析与可视化。
