--- a/db.tex
+++ b/db.tex
@@ -1,2 +1,2 @@
-\item \textbf{数据库技术}：熟悉MySQL设计与优化，掌握事务和索引优化；熟悉Redis、MongoDB等NoSQL应用，能根据需求选择合适的数据存储；有ElasticSearch搜索引擎实践经验，能进行分词和查询优化，提升检索效率。
-\item \textbf{消息队列}：熟练使用RabbitMQ实现异步解耦与高可用消息系统，掌握消息持久化、延迟与死信队列等特性；了解Kafka分布式架构，有高并发消息流处理与管道搭建经验。
+\item \textbf{数据库技术}：熟悉\textbf{MySQL}设计与优化，掌握事务和索引优化；熟悉\textbf{Redis}、\textbf{MongoDB}等\textbf{NoSQL}应用，能根据需求选择合适的数据存储；有\textbf{ElasticSearch}搜索引擎实践经验，能进行分词和查询优化，提升检索效率。
+\item \textbf{消息队列}：熟练使用\textbf{RabbitMQ}实现\textbf{异步解耦}与\textbf{高可用消息系统}，掌握\textbf{消息持久化}、\textbf{延迟与死信队列}等特性；了解\textbf{Kafka}分布式架构，有高并发消息流处理与管道搭建经验。
