--- a/go_mini.tex
+++ b/go_mini.tex
@@ -1,1 +1,1 @@
-\item \textbf{Go后端技术}：熟悉Go语言基础语法、类型系统与标准库，掌握Goroutine与Channel并发模型，理解Go模块管理与工具链；具备基于Gin框架的RESTful接口开发能力，熟练使用GORM进行ORM建模、关系映射与事务处理，实现高性能Web服务的设计、开发与部署。
+\item \textbf{Go后端技术}：熟悉\textbf{Go语言基础语法}、\textbf{类型系统}与\textbf{标准库}，掌握\textbf{Goroutine}与\textbf{Channel并发模型}，理解\textbf{Go模块管理}与\textbf{工具链}；具备基于\textbf{Gin框架}的RESTful接口开发能力，熟练使用\textbf{GORM}进行ORM建模、关系映射与事务处理，实现高性能Web服务的设计、开发与部署。
