--- a/go_proj.tex
+++ b/go_proj.tex
@@ -1,14 +1,14 @@
 \subsection{\textbf{高校学生二手交易场景下的电子商务平台} \hspace{2cm}{2024.10 -- 2024.12}}
-\fontsize{11pt}{0}{\textbf{项目描述}：面向高校学生二手交易场景，基于Go+Gin开发，支持物品发布、搜索、在线交易与管理，集成ElasticSearch提升检索效率，助力学生便捷获取学习生活用品。}
+\fontsize{11pt}{0}{\textbf{项目描述}：面向高校学生二手交易场景，基于\textbf{Go+Gin}开发，支持\textbf{物品发布、搜索、在线交易与管理}，集成\textbf{ElasticSearch}提升检索效率，助力学生便捷获取学习生活用品。}
   \begin{normalsize}
     \begin{itemize}
-    \item \textbf{个人负责}：负责系统架构设计与核心业务模块开发，基于Gin+Gorm实现商品、订单、用户管理等服务，集成ElasticSearch搜索引擎优化商品检索性能，并使用React+Ant Design完成前端界面开发。
-    \item \textbf{技术亮点}：
+  \item \textbf{个人负责}：负责系统架构设计与核心业务模块开发，基于\textbf{Gin+Gorm}实现商品、订单、用户管理等服务，集成\textbf{ElasticSearch搜索引擎}优化商品检索性能，并使用\textbf{React+Ant Design}完成前端界面开发。
+  \item \textbf{技术亮点}：
     \setlength{\itemindent}{1em} % 子项缩进调整
-      \item[$\circ$] \textbf{高性能后端架构}：采用Gin框架分层设计（路由层→逻辑层→数据访问层），结合Goroutine实现高并发异步处理，系统具备良好扩展性与稳定性，接口响应时间降至60ms，支持大规模并发访问，并集成JWT鉴权中间件，保障数据安全与访问权限。
-      \item[$\circ$] \textbf{高效数据存储}：基于Gorm+MySQL实现商品、订单、用户等核心数据的高效读写与复杂事务处理，结合索引优化与数据校验机制，单表日均处理数据5万+条，显著提升数据一致性、查询性能与系统扩展能力。
-      \item[$\circ$] \textbf{搜索引擎优化}：集成ElasticSearch实现多条件商品搜索（品类、校区、价格区间），响应时间从300ms优化至60ms，有效提升校园二手交易匹配效率，支撑日均3000+次安全访问。
-      \item[$\circ$] \textbf{前端界面开发}：使用React+Ant Design构建管理端和学生端界面，实现商品、订单、用户等模块的高效管理，优化表单、表格与交互流程，页面操作效率提升40\%，显著提升学生操作体验和系统易用性。
+  \item[$\circ$] \textbf{高性能后端架构}：采用\textbf{Gin框架分层设计}（路由层→逻辑层→数据访问层），结合\textbf{Goroutine}实现高并发异步处理，系统具备良好\textbf{扩展性与稳定性}，接口响应时间降至\textbf{60ms}，支持\textbf{大规模并发访问}，并集成\textbf{JWT鉴权中间件}，保障\textbf{数据安全与访问权限}。
+  \item[$\circ$] \textbf{高效数据存储}：基于\textbf{Gorm+MySQL}实现商品、订单、用户等核心数据的高效读写与复杂事务处理，结合\textbf{索引优化与数据校验机制}，单表日均处理数据\textbf{5万+条}，显著提升\textbf{数据一致性、查询性能与系统扩展能力}。
+  \item[$\circ$] \textbf{搜索引擎优化}：集成\textbf{ElasticSearch}实现多条件商品搜索（品类、校区、价格区间），响应时间从\textbf{300ms优化至60ms}，有效提升\textbf{校园二手交易匹配效率}，支撑日均\textbf{3000+次安全访问}。
+  \item[$\circ$] \textbf{前端界面开发}：使用\textbf{React+Ant Design}构建管理端和学生端界面，实现商品、订单、用户等模块的高效管理，优化\textbf{表单、表格与交互流程}，页面操作效率提升\textbf{40\%}，显著提升\textbf{学生操作体验和系统易用性}。
     \setlength{\itemindent}{0em} % 子项缩进调整
     \item \textbf{相关技术}: Go/Gin/Gorm/MySQL/ElasticSearch/React/Ant Design
     \end{itemize}
