--- a/java_mini.tex
+++ b/java_mini.tex
@@ -1,1 +1,1 @@
-\item \textbf{Java和Spring生态}：熟悉Java基础、集合、JVM、并发编程与垃圾回收；掌握Spring生态（SpringBoot、SpringMVC）、MyBatis/MyBatisPlus及微服务（SpringCloud、Nacos、OpenFeign等），具备前后端分离与异步高并发处理经验；了解本地大模型部署与SpringAI集成。
+\item \textbf{Java和Spring生态}：熟悉\textbf{Java基础}、\textbf{集合}、\textbf{JVM}、\textbf{并发编程}与\textbf{垃圾回收}；掌握\textbf{Spring生态}（\textbf{SpringBoot}、\textbf{SpringMVC}）、\textbf{MyBatis/MyBatisPlus}及\textbf{微服务}（\textbf{SpringCloud}、\textbf{Nacos}、\textbf{OpenFeign}等），具备前后端分离与异步高并发处理经验；了解\textbf{本地大模型部署}与\textbf{SpringAI集成}。
