--- a/node_mini.tex
+++ b/node_mini.tex
@@ -1,1 +1,1 @@
-\item \textbf{Node.js开发}：熟悉Node.js及主流框架（Express、NestJS），具备模块化开发能力；掌握异步编程与事件驱动模型，理解中间件机制，能用Mongoose高效操作MongoDB；精通TypeORM建模、关系映射与事务处理。
+\item \textbf{Node.js开发}：熟悉\textbf{Node.js及主流框架}（\textbf{Express}、\textbf{NestJS}），具备\textbf{模块化开发能力}；掌握\textbf{异步编程}与\textbf{事件驱动模型}，理解\textbf{中间件机制}，能用\textbf{Mongoose}高效操作\textbf{MongoDB}；精通\textbf{TypeORM建模}、\textbf{关系映射}与\textbf{事务处理}。
