--- a/practice.tex
+++ b/practice.tex
@@ -1,16 +1,16 @@
 \section{实习经历}
 \datedsubsection{\textbf{广州拓扑网络技术有限公司}\hspace{2.5cm}后端开发实习生}{2025.05 -- 2025.08}
-\fontsize{11pt}{0}{\textbf{实习描述}：参与基于NestJS的企业级内部管理平台开发，负责RPA机器人管理、AI知识库、逆向物流自动化等模块后端开发，集成影刀RPA、Coze AI、钉钉开放平台，实现业务流程自动化与智能化管理。}
+\fontsize{11pt}{0}{\textbf{实习描述}：参与基于\textbf{NestJS}的企业级内部管理平台开发，负责\textbf{RPA机器人管理}、\textbf{AI知识库}、\textbf{逆向物流自动化}等模块后端开发，集成\textbf{影刀RPA}、\textbf{Coze AI}、\textbf{钉钉开放平台}，实现\textbf{业务流程自动化与智能化管理}。}
   \begin{normalsize}
     \begin{itemize}
     \item \textbf{核心职责}：
     \setlength{\itemindent}{1em} % 子项缩进调整
-      \item[$\circ$] \textbf{后端框架与数据库}：基于NestJS实现机器人、任务、调度、逆向物流等模块接口，使用TypeORM建模并实现MySQL多表关联，通过Repository模式封装数据访问层，结合NestJS管道实现接口参数自动校验与数据转换，优化MySQL复杂查询逻辑与索引策略，提升性能约40\%及数据安全性。
-      \item[$\circ$] \textbf{高并发与缓存优化}：利用Node.js异步事件驱动与非阻塞I/O模型保持系统高吞吐，结合NestJS拦截器与Redis缓存实现机器人状态缓存，接口响应时间由500ms降低至20ms，支撑10万级高并发请求。
-      \item[$\circ$] \textbf{消息队列与定时调度}：集成RabbitMQ实现任务异步投递与机器人动态分配，基于cron表达式实现定时巡检与数据同步，结合NestJS守卫实现权限控制，日均调度任务数超5000条，任务分发延迟控制在200ms内。
-      \item[$\circ$] \textbf{第三方平台集成}：主导阿里巴巴开放平台订单管理（查询、同步、发货）、腾讯文档自动化操作，集成影刀RPA、Coze AI等API，基于NestJS自定义装饰器和钉钉开放平台实现统一认证、权限校验与钉钉高并发登录，支撑多业务场景高效落地。
-      \item[$\circ$] \textbf{竞对数据分析}：基于爬虫技术采集竞对商品数据，监控商品排位变化，实现价格、销量等关键指标追踪与分析，日均采集商品数据3万+条，覆盖500+竞对SKU监控。
-      \item[$\circ$] \textbf{日志记录与监控}：使用MongoDB结合Mongoose建模，结合NestJS异常过滤器与拦截器统一记录系统关键业务操作与用户行为日志，支持日均2万+操作日志高效写入，突破关系型数据库字段限制。
+  \item[$\circ$] \textbf{后端框架与数据库}：基于\textbf{NestJS}实现机器人、任务、调度、逆向物流等模块接口，使用\textbf{TypeORM}建模并实现\textbf{MySQL多表关联}，通过\textbf{Repository模式}封装数据访问层，结合\textbf{NestJS管道}实现接口参数自动校验与数据转换，优化\textbf{MySQL}复杂查询逻辑与索引策略，提升性能约\textbf{40\%}及数据安全性。
+  \item[$\circ$] \textbf{高并发与缓存优化}：利用\textbf{Node.js异步事件驱动}与\textbf{非阻塞I/O模型}保持系统高吞吐，结合\textbf{NestJS拦截器}与\textbf{Redis缓存}实现机器人状态缓存，接口响应时间由\textbf{500ms降低至20ms}，支撑\textbf{10万级高并发请求}。
+  \item[$\circ$] \textbf{消息队列与定时调度}：集成\textbf{RabbitMQ}实现任务异步投递与机器人动态分配，基于\textbf{cron表达式}实现定时巡检与数据同步，结合\textbf{NestJS守卫}实现权限控制，日均调度任务数超\textbf{5000条}，任务分发延迟控制在\textbf{200ms}内。
+  \item[$\circ$] \textbf{第三方平台集成}：主导\textbf{阿里巴巴开放平台订单管理}（查询、同步、发货）、\textbf{腾讯文档自动化操作}，集成\textbf{影刀RPA}、\textbf{Coze AI}等API，开发\textbf{Shopline Webhook}实现订单、商品等事件自动同步，基于\textbf{NestJS自定义装饰器}和\textbf{钉钉开放平台}实现统一认证、权限校验与\textbf{钉钉高并发登录}，并支持\textbf{钉钉消息通知}，支撑多业务场景高效落地。
+  \item[$\circ$] \textbf{竞对数据分析}：基于\textbf{爬虫技术}采集竞对商品数据，监控\textbf{商品排位变化}，实现价格、销量等\textbf{关键指标追踪与分析}，日均采集商品数据\textbf{3万+条}，覆盖\textbf{500+竞对SKU监控}。
+  \item[$\circ$] \textbf{日志记录与监控}：使用\textbf{MongoDB}结合\textbf{Mongoose}建模，结合\textbf{NestJS异常过滤器与拦截器}统一记录系统关键业务操作与\textbf{用户行为日志}，支持日均\textbf{2万+操作日志高效写入}，突破\textbf{关系型数据库字段限制}。
     \setlength{\itemindent}{0em} % 子项缩进调整
     \item \textbf{相关技术}: Node.js/NestJS/TypeORM/Mongoose/Redis/RabbitMQ/Coze AI/主流开放平台
     \end{itemize}
