--- a/python_mini.tex
+++ b/python_mini.tex
@@ -1,1 +1,1 @@
-\item \textbf{Python数据分析}：熟悉Python语法、类型注解、面向对象与异步编程；精通基于FastAPI与Pydantic的数据建模、校验与RESTful接口开发；熟练使用SQLAlchemy/SQLModel与PyMySQL进行ORM建模、关系映射与事务处理；精通Pandas、NumPy、Matplotlib等库的数据处理、分析与可视化。
+\item \textbf{Python数据分析}：熟悉\textbf{Python语法}、\textbf{类型注解}、\textbf{面向对象与异步编程}；精通基于\textbf{FastAPI}与\textbf{Pydantic}的数据建模、校验与RESTful接口开发；熟练使用\textbf{SQLAlchemy}/\textbf{SQLModel}与\textbf{PyMySQL}进行ORM建模、关系映射与事务处理；熟悉\textbf{Pandas}、\textbf{NumPy}、\textbf{Matplotlib}等库的数据处理、分析与可视化；具备\textbf{Hadoop}、\textbf{Hive}、\textbf{Spark}等大数据平台实战经验，能够使用\textbf{PyHive}、\textbf{PySpark}进行分布式数据处理与分析。
