--- a/python_proj.tex
+++ b/python_proj.tex
@@ -1,16 +1,16 @@
 \subsection{\textbf{技术团队协作场景下的在线博客系统} \hspace{2cm}{2025.06 -- 至今}}
-\fontsize{11pt}{0}{\textbf{项目描述}：面向IT技术团队知识协作场景，基于FastAPI异步架构，支持文档管理、代码分享、团队互动与智能推荐，助力企业知识沉淀与协作效率提升。}
+\fontsize{11pt}{0}{\textbf{项目描述}：面向IT技术团队知识协作场景，基于\textbf{FastAPI异步架构}，融合\textbf{Hadoop}、\textbf{Hive}、\textbf{Spark}等大数据平台，支持\textbf{文档管理}、\textbf{代码分享}、\textbf{团队互动}与\textbf{智能推荐}，助力企业知识沉淀与协作效率提升。}
   \begin{normalsize}
     \begin{itemize}
-    \item \textbf{个人负责}：负责后端服务架构设计与核心模块开发，基于FastAPI实现技术文档管理、团队协作系统与讨论交互模块，设计并优化MySQL数据库结构，结合SQLModel与PyMySQL提升数据库访问效率，并使用React和Ant Design实现前端页面，集成Coze实现AI数据分析与智能聊天。
+  \item \textbf{个人负责}：主导\textbf{后端架构设计与核心开发}，优化\textbf{数据库结构与访问效率}，融合\textbf{Hadoop}、\textbf{Hive}、\textbf{Spark}平台和\textbf{Python相关库}实现\textbf{大数据分析处理}，并使用\textbf{React+Ant Design}完成\textbf{前端开发}与\textbf{AI智能聊天集成}。
     \item \textbf{技术亮点}：
     \setlength{\itemindent}{1em} % 子项缩进调整
-      \item[$\circ$] \textbf{后端架构与数据库优化}：采用FastAPI结合Pydantic进行路由与数据模型校验，配合SQLModel ORM与PyMySQL，建立复合索引，优化查询与连接池，文档检索响应时间从1.8s缩短至0.4s。
-      \item[$\circ$] \textbf{高并发与安全认证}：利用FastAPI异步特性和Uvicorn服务器，支持1000+并发请求稳定运行；集成JWT中间件实现权限控制，权限校验平均耗时200ms，支持日均3000+次安全访问。
-      \item[$\circ$] \textbf{智能推荐与数据分析}：集成Pandas+Scikit-learn实现用户行为分析，使用TF-IDF和余弦相似度算法构建个性化推荐系统，推荐准确率达75\%以上，日均处理分析数据10万+条。
-      \item[$\circ$] \textbf{前端UI与数据可视化}：基于React+Ant Design构建高可用博客界面，支持Markdown格式内容输入与实时渲染，并集成React Echarts实现阅读趋势、用户活跃度等多种数据可视化展示，管理效率提升60\%。
-      \item[$\circ$] \textbf{AI与交互体验}：集成Coze平台流式响应，前端结合React Markdown打造实时、流畅的智能问答与AI聊天界面，AI回复准确率85\%，日均交互量500+次。
+  \item[$\circ$] \textbf{后端架构与数据库优化}：采用\textbf{FastAPI}结合\textbf{Pydantic}进行路由与数据模型校验，配合\textbf{SQLModel ORM}与\textbf{PyMySQL}，建立\textbf{复合索引}，优化\textbf{查询与连接池}，文档检索响应时间从\textbf{1.8s缩短至0.4s}。
+  \item[$\circ$] \textbf{高并发与安全认证}：利用\textbf{FastAPI异步特性}和\textbf{Uvicorn服务器}，支持\textbf{1000+并发请求}稳定运行；集成\textbf{JWT中间件}实现权限控制，权限校验平均耗时\textbf{200ms}，支持日均\textbf{3000+次安全访问}。
+  \item[$\circ$] \textbf{智能推荐与大数据分析}：基于\textbf{Hadoop/Hive}相关平台，利用\textbf{PySpark}分布式处理博客数据，结合\textbf{Pandas}与\textbf{Scikit-learn}实现用户行为分析与个性化推荐系统，支持\textbf{千万级数据高效分析}，推荐准确率超过\textbf{75\%}。
+  \item[$\circ$] \textbf{前端UI与数据可视化}：基于\textbf{React+Ant Design}构建高可用博客界面，支持\textbf{Markdown格式}内容输入与实时渲染，并集成\textbf{React Echarts}实现阅读趋势、用户活跃度等多种数据\textbf{可视化展示}，管理效率提升\textbf{60\%}。
+  \item[$\circ$] \textbf{AI与交互体验}：集成\textbf{Coze平台流式响应}，前端结合\textbf{React Markdown}打造实时、流畅的\textbf{智能问答与AI聊天界面}，AI回复准确率\textbf{85\%}，日均交互量\textbf{500+次}。
     \setlength{\itemindent}{0em} % 子项缩进调整
-    \item \textbf{相关技术}: Python/FastAPI/SQLModel/MySQL/Pandas/Scikit-learn/React/Ant Design/Coze AI
+  \item \textbf{相关技术}: Python/FastAPI/SQLModel/MySQL/Hadoop/Hive/Spark/React/Ant Design/Coze AI
     \end{itemize}
   \end{normalsize}
