--- a/common.tex
+++ b/common.tex
@@ -1,3 +1,4 @@
+\item \textbf{实时通信}：熟悉\textbf{WebSocket}，能在\textbf{Spring}、\textbf{Gin}、\textbf{NestJS}与\textbf{FastAPI}上实现实时推送、连接管理与跨实例广播。
 \item \textbf{AI平台集成}：熟悉\textbf{Coze AI平台}的\textbf{API接入与集成}，掌握\textbf{企业知识库构建}、\textbf{文档上传}、\textbf{智能问答}等功能开发，具备\textbf{AI助手}系统后端开发经验。
 \item \textbf{前端技术}：熟悉\textbf{Javascript}/\textbf{Typescript}，掌握\textbf{Vue.js}核心概念与\textbf{Element UI}组件库，具备独立构建和维护前端项目能力；了解\textbf{React框架}与\textbf{Ant Design}组件库，具备多框架技术选型与开发经验。
-\item \textbf{开发与运维环境}：熟悉使用\textbf{Git}进行\textbf{版本控制}的流程；熟悉\textbf{Linux操作系统}的基本命令，能够在\textbf{Linux环境}下进行开发和部署；熟悉\textbf{Docker容器化部署}，能够进行高效服务集群的搭建；了解\textbf{Nginx}的安装、配置与优化，能够进行\textbf{负载均衡}、\textbf{反向代理}、\textbf{静态资源服务}等功能配置。
+\item \textbf{开发与运维环境}：熟悉使用\textbf{Git}进行\textbf{版本控制}的流程；熟悉\textbf{Linux操作系统}的基本命令，能够在\textbf{Linux环境}下进行开发和部署；熟悉\textbf{Docker容器化部署}，能够进行高效服务集群的搭建。
